2021-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ekbmacro-links): small changes.
	(find-emajormode-links): new function.
	(find-eminormodes-links): new function.

	* eev-blinks.el (find-eppm): new function.

2021-12-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-package-url): new function.
	(ee-find-epackage-links0): mostly rewritten.

2021-12-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-multiwindow.el (ee-first-frame-with-title)
	(ee-select-frame, find-wset-F): new functions.

2021-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-find-w3m-links): new function.
	(ee-eww-bufferp): new function.
	(ee-find-eww-links): new function.
	(ee-fhl-main-program): added an entry for eww-mode.

2021-12-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-preprocess-line): new function.
	(eepitch-this-line): use `eepitch-preprocess-line'.

	* eev-intro.el (find-eepitch-intro): added a new section that
	explains `eepitch-preprocess-line'.

2021-12-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2021orgfornonusersvideo): new function.

2021-12-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-sml): new function.

	* eev-testblocks.el (ee-insert-test-sml-mode): new function.

2021-12-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-saving-links-intro): rewrote several
	sections.

2021-12-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* README: rewritten to explain an issue with autoloads.

	* eev-intro.el (find-saving-links-intro): new function.
	(find-eev-intro): mention `(find-saving-links-intro)'.

2021-12-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2021workshop4video)
	(find-2021workshop5video, find-2021workshop6video): new functions.

	* eev-intro.el (find-eev-exercises-intro): several new sections.

2021-12-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2021workshop2video)